--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="">
     <link rel="stylesheet" href="style/normalize.css">
-    <link rel="stylesheet" href="style/style.min.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header class="header">
